# mono-citizen

./: README.md  pyproject.toml
mono_citizen/: __main__.py  changelog.py  cli.py  git.py  version.py
tests/: test_git.py  test_version.py
