[project]
name = "mono-citizen"
version = "0.1.0"
description = "Collect semantic versioning for individual packages"
authors = [
    { name = "Tim Kreitner", email = "tim@kreitner.xyz" }
]
dependencies = [
    "rich>=13.7.1",
    "rich-click>=1.8.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mono_citizen"]
